Mobile JS interactions done

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,13 +6,13 @@
     <title>Notif | By Veritran</title>
     <script src="https://kit.fontawesome.com/c59c31b882.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="overlay active"></div>
-    <section class="sidebar mobile-active">
+    <div class="overlay"></div>
+    <section class="sidebar">
         <div class="logo">
             <img src="img/logo-notif.png" alt="Logo Notif app, by Veritran">
         </div>
@@ -21,11 +21,11 @@
             <i class="fas fa-cog"></i>
         </div>
         <nav class="nav-menu">
-            <ul class="nav-menu__list ">
+            <ul class="nav-menu__list">
                 <li class="nav-menu__item m-level-1">
                     <a href="#"><i class="fas fa-rss"></i>Campaigns</a>
                 </li>
-                <li class="nav-menu__item m-level-1 nav-menu__item--opened">
+                <li class="nav-menu__item m-level-1 m-parent">
                     <a href="#"><i class="fas fa-bell"></i>Notification</a>
                     <ul class="nav-menu__sub m-level-2">
                         <li class="nav-menu__item m-level-2">
