Change View mode JS implementation

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
             <div class="hamburger">
                 <div class="hamburger__ic-menu"><i class="fas fa-bars"></i></div>
                 <div class="hamburger__logo"><img src="img/logo-notif.png" alt="Logo Notif app, by Veritran"></div>
-                <div class="hamburger__view-mode"><i class="fas fa-th"></i></div>
+                <div class="hamburger__view-mode change-view-mode"><i class="fas fa-th"></i></div>
             </div>
             </div>
             <div class="header__top">
@@ -67,10 +67,10 @@
                             <input class="search-bar__field" type="search" name="template-search" placeholder="Search by Template Name">
                         </form>
                     </div>
-                    <button class="ctn-options__button"><i class="fas fa-th-list"></i></button>
+                    <button class="ctn-options__button change-view-mode"><i class="fas fa-th-list"></i></button>
                     <button class="ctn-options__button primary-btn">+ Create Template</button>
                 </div>
-                <div class="templates-list view-mode-grid">
+                <div class="templates-list">
                     <div class="content-card">
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
