Desktop styles for dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,8 +51,8 @@
             </div>
             </div>
             <div class="header__top">
-                <button class="btn-collapse"><i class="ma">Collapse sidebar</i></button>
-                <button class="btn-grid"><i class="ma">Change grid</i></button>
+                <div class="btn-collapse"><i class="fas fa-chevron-left"></i></div>
+                <div class="btn-grid"><i class="fas fa-th"></i></div>
             </div>
         </header>
         <div class="dashboard-body">
@@ -71,6 +71,54 @@
                     <button class="ctn-options__button primary-btn">+ Create Template</button>
                 </div>
                 <div class="templates-list">
+                    <div class="content-card">
+                        <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
+                        <div class="content-card__body">
+                            <span class="content-card__label">Template Name</span>
+                            <h3 class="content-card__title">Avance_tarjeta</h3>
+
+                            <span class="content-card__label">Description</span>
+                            <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
+
+                            <div class="content-card__options">
+                                <a href="#">App</a>
+                                <a href="#">Push</a>
+                                <a href="#" class="content-card__edit"><i class="fas fa-pen"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-card">
+                        <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
+                        <div class="content-card__body">
+                            <span class="content-card__label">Template Name</span>
+                            <h3 class="content-card__title">Avance_tarjeta</h3>
+
+                            <span class="content-card__label">Description</span>
+                            <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
+
+                            <div class="content-card__options">
+                                <a href="#">App</a>
+                                <a href="#">Push</a>
+                                <a href="#" class="content-card__edit"><i class="fas fa-pen"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-card">
+                        <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
+                        <div class="content-card__body">
+                            <span class="content-card__label">Template Name</span>
+                            <h3 class="content-card__title">Avance_tarjeta</h3>
+
+                            <span class="content-card__label">Description</span>
+                            <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
+
+                            <div class="content-card__options">
+                                <a href="#">App</a>
+                                <a href="#">Push</a>
+                                <a href="#" class="content-card__edit"><i class="fas fa-pen"></i></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="content-card">
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
