Desktop JS interations and sidebar styles

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
             <img src="img/logo-notif.png" alt="Logo Notif app, by Veritran">
         </div>
         <div class="sidebar__nav-item">
-            <a href="#">Pedro Pablo</a>
+            <a href="#">Pedro Sanchez</a>
             <i class="fas fa-cog"></i>
         </div>
         <nav class="nav-menu">
@@ -52,7 +52,7 @@
             </div>
             <div class="header__top">
                 <div class="btn-collapse"><i class="fas fa-chevron-left"></i></div>
-                <div class="btn-grid"><i class="fas fa-th"></i></div>
+                <div class="change-view-mode"><i class="fas fa-th"></i></div>
             </div>
         </header>
         <div class="dashboard-body">
@@ -91,7 +91,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Limite_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
@@ -107,7 +107,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Promo_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
@@ -123,7 +123,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Extension_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
@@ -139,7 +139,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Solicitud_Baja_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
@@ -155,7 +155,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Nueva_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
@@ -171,7 +171,7 @@
                         <div class="content-card__img"><img src="img/no-image.jpg" alt="broken image of template"></div>
                         <div class="content-card__body">
                             <span class="content-card__label">Template Name</span>
-                            <h3 class="content-card__title">Avance_tarjeta</h3>
+                            <h3 class="content-card__title">Habilitar_Viaje_tarjeta</h3>
 
                             <span class="content-card__label">Description</span>
                             <div class="content-card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra tortor nisi, nec pretium lectus consectetur et. Vivamus volutpat.</div>
